--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -140,10 +140,13 @@
     <ClCompile Include="..\include\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="..\include\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\include\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="..\resources\shaders\gltf_main.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="cJSON.c" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="test.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
@@ -155,6 +158,7 @@
     <ClInclude Include="..\include\bone_animation.h" />
     <ClInclude Include="..\include\camera.h" />
     <ClInclude Include="..\include\collision.h" />
+    <ClInclude Include="..\include\gltf_model.h" />
     <ClInclude Include="..\include\input.h" />
     <ClInclude Include="..\include\gltf.h" />
     <ClInclude Include="..\include\grid.h" />
@@ -196,6 +200,8 @@
     <None Include="..\shaders\grid.vs" />
     <None Include="..\shaders\hitbox.fs" />
     <None Include="..\shaders\hitbox.vs" />
+    <None Include="..\shaders\pbr\pbr.fs" />
+    <None Include="..\shaders\pbr\pbr.vs" />
     <None Include="..\shaders\skybox.fs" />
     <None Include="..\shaders\skybox.vs" />
     <None Include="..\shaders\skybox2.fs" />
