--- a/assimp_viewer/imgui.ini
+++ b/assimp_viewer/imgui.ini
@@ -44,8 +44,8 @@ Size=300,120
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1086,1087
-Size=1311,594
+Pos=638,1033
+Size=1311,738
 Collapsed=1
 
 [Window][Menu]
@@ -74,8 +74,8 @@ Size=520,600
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=132,735
-Size=485,414
+Pos=442,387
+Size=584,619
 Collapsed=0
 
 [Window][Example: Documents]
@@ -129,14 +129,19 @@ Size=400,200
 Collapsed=0
 
 [Window][Scene]
-Pos=32,620
-Size=343,402
+Pos=151,566
+Size=343,430
 Collapsed=0
 
 [Window][AABB]
-Pos=17,162
+Pos=111,146
 Size=304,356
 Collapsed=1
+
+[Window][Textures]
+Pos=1083,169
+Size=866,797
+Collapsed=0
 
 [Table][0x123EFEF7,4]
 RefScale=13
