--- a/assimp_viewer/assimp_viewer.vcxproj.filters
+++ b/assimp_viewer/assimp_viewer.vcxproj.filters
@@ -149,6 +149,12 @@
     <ClInclude Include="..\include\gltf_model.h">
       <Filter>Header Files\import</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\gltf\gltf_structures.h">
+      <Filter>Header Files\import</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\gltf\gltf_print.h">
+      <Filter>Header Files\import</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shaders\grid.vs">
