--- a/assimp_viewer/assimp_viewer.vcxproj.filters
+++ b/assimp_viewer/assimp_viewer.vcxproj.filters
@@ -161,6 +161,9 @@
     <ClInclude Include="..\include\gltf\gltf_memory.h">
       <Filter>Header Files\import</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\gltf\gltf_full.h">
+      <Filter>Header Files\import</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shaders\grid.vs">
